# PgDiffPy

./: .gitignore  CONTRIBUTING.md  CREDITS  PgDiff.py  README.md  pyproject.toml  setup.py
diff/: PgDiffSequences.py  PgDiffTables.py  PgDiffTriggers.py
loaders/: PgDumpLoader.py
parser/: AlterTableParser.py  CommentParser.py  CreateIndexParser.py  CreateSchemaParser.py  CreateSequenceParser.py  CreateTableParser.py  Parser.py
pgdiff/: __init__.py  __main__.py
pgdiff/diff/: PgDiffConstraints.py  PgDiffFunctions.py  PgDiffIndexes.py  PgDiffViews.py
pgdiff/loaders/: PgDumpLoader.py
pgdiff/parser/: AlterSequenceParser.py  AlterTableParser.py  AlterViewParser.py  CommentParser.py  CreateFunctionParser.py  CreateIndexParser.py  CreateSchemaParser.py  CreateSequenceParser.py  CreateTableParser.py  CreateTriggerParser.py  CreateViewParser.py
pgdiff/schema/: PgColumn.py  PgFunction.py  PgSchema.py  PgTable.py  PgView.py
schema/: PgColumn.py  PgDatabase.py  PgFunction.py  PgSchema.py  PgTable.py  PgView.py
